--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -20,8 +20,14 @@
         <select name="page" id="page-select"> </select>
       </div>
       <div id="filters">
-        <span>By reasonable price</span>
-        <span>By recently released</span>
+		<div id="box-price">
+			<label for="price-check">By reasonable price:</label>
+			<input type="checkbox" id="price-check">
+		</div>
+		<div id="box-released">
+			<label for="released-check">By recently released:</label>
+			<input type="checkbox" id="released-check">
+		</div>
         <div id="brand">
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
