--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -46,27 +46,27 @@
     <section id="indicators">
       <h2>Indicators</h2>
       <div>
-        <span>Number of products</span>
+        <span>Number of products:</span>
         <span id="nbProducts">0</span>
       </div>
       <div>
-        <span>Number of new products</span>
+        <span>Number of new products:</span>
+        <span id="nbNewProducts">0</span>
+      </div>
+      <div>
+        <span>p50 price value:</span>
         <span>0</span>
       </div>
       <div>
-        <span>p50 price value</span>
+        <span>p90 price value:</span>
         <span>0</span>
       </div>
       <div>
-        <span>p90 price value</span>
+        <span>p95 price value:</span>
         <span>0</span>
       </div>
       <div>
-        <span>p95 price value</span>
-        <span>0</span>
-      </div>
-      <div>
-        <span>Last released date</span>
+        <span>Last released date:</span>
         <span>2020-01-01</span>
       </div>
     </section>
