--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -55,19 +55,19 @@
       </div>
       <div>
         <span>p50 price value:</span>
-        <span>0</span>
+        <span id="p50">0</span>
       </div>
       <div>
         <span>p90 price value:</span>
-        <span>0</span>
+        <span id="p90">0</span>
       </div>
       <div>
         <span>p95 price value:</span>
-        <span>0</span>
+        <span id="p95">0</span>
       </div>
       <div>
         <span>Last released date:</span>
-        <span>2020-01-01</span>
+        <span id="lastReleased">2020-01-01</span>
       </div>
     </section>
     <section id="products"></section>
