--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -40,6 +40,7 @@
           <option value="price-desc">Expensive</option>
           <option value="date-asc">Recently released</option>
           <option value="date-desc">Anciently released</option>
+		  <option value="fav">Favorites</option>
         </select>
       </div>
     </section>
@@ -70,6 +71,7 @@
         <span id="lastReleased">2020-01-01</span>
       </div>
     </section>
+	<section id="favorites"></section>
     <section id="products"></section>
     <script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
   </body>
