--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>👕 Clear Fahion | Environmentally & human-friendly clothes</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Clear fashion</h1>
@@ -71,8 +72,8 @@
         <span id="lastReleased">2020-01-01</span>
       </div>
     </section>
-	<section id="favorites"></section>
     <section id="products"></section>
+	<section id="favorites"></section>
     <script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
   </body>
 </html>
