--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>👕 Clear Fahion | Environmentally & human-friendly clothes</title>
+    <title>👕 Clear Fashion | Environmentally & human-friendly clothes</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -25,10 +25,6 @@
 			<label for="price-check">By reasonable price:</label>
 			<input type="checkbox" id="price-check">
 		</div>
-		<div id="box-released">
-			<label for="released-check">By recently released:</label>
-			<input type="checkbox" id="released-check">
-		</div>
         <div id="brand">
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
@@ -39,9 +35,6 @@
         <select name="sort" id="sort-select">
           <option value="price-asc">Cheaper</option>
           <option value="price-desc">Expensive</option>
-          <option value="date-asc">Recently released</option>
-          <option value="date-desc">Anciently released</option>
-		  <option value="fav">Favorites</option>
         </select>
       </div>
     </section>
@@ -50,10 +43,6 @@
       <div>
         <span>Number of products:</span>
         <span id="nbProducts">0</span>
-      </div>
-      <div>
-        <span>Number of new products:</span>
-        <span id="nbNewProducts">0</span>
       </div>
       <div>
         <span>p50 price value:</span>
@@ -67,13 +56,9 @@
         <span>p95 price value:</span>
         <span id="p95">0</span>
       </div>
-      <div>
-        <span>Last released date:</span>
-        <span id="lastReleased">2020-01-01</span>
-      </div>
     </section>
+    <section id="favorites"></section>
     <section id="products"></section>
-	<section id="favorites"></section>
     <script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
   </body>
 </html>
